<resources>
    <string name="app_name">Sharedprefkotlin</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="none">none</string>
    <string name="save">Save</string>
    <string name="favorite">Select your Favorite</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
</resources>