<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView

        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        app:layout_constraintTop_toBottomOf="@+id/txt_age"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@+id/tv_age"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tv_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        app:layout_constraintTop_toBottomOf="@+id/txt_fav"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <Button
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/tv_fav"
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>